--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
+    "axios": "^1.9.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5"
   },
